Leave Management System using Android committed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">E_Project</string>
+    <string name="app_name">LMS</string>
     <string name="title_activity_employee__dashboard">Employee_Dashboard</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
